--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,2 @@
-<mat-toolbar class="header mat-elevation-z4" >
-    <span>
-        <a>
-            <img class="logo" src="assets/logo/logo.jpg" alt="logo">
-        </a>
-    </span>
-    <span class="title-group">
-        <a>
-            <i class="material-icons">
-                 home
-            </i>
-            Aplicação CRUD
-        </a>
-    </span>
-</mat-toolbar>
+<app-header></app-header>
+<app-footer></app-footer>
