--- a/src/app/components/template/header/header.component.html
+++ b/src/app/components/template/header/header.component.html
@@ -9,7 +9,7 @@
             <i class="material-icons">
                home
             </i>
-            Aplicação CRUD
+            início
         </a>
     </span>
 </mat-toolbar>
