--- a/src/app/components/template/nav/nav.component.html
+++ b/src/app/components/template/nav/nav.component.html
@@ -35,4 +35,7 @@
             
         </mat-nav-list>
     </mat-sidenav>
+    <mat-sidenav-content class="content">
+        <app-home></app-home>
+    </mat-sidenav-content>
 </mat-sidenav-container>
