--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -5,4 +5,10 @@
     <mat-card-subtitle class="subtitle">
         Sistema para exemplificar  a contrução de um cadastro em Angular
     </mat-card-subtitle>
+
+    <ul>
+        <li *myFor="let n em [1, 2, 3]" >{{ n }}</li>
+    </ul>
+
+    <tag *struct="let a">{{ a }}</tag>
 </mat-card>>
