Exibindo Produtos com *ngFor

--- a/src/app/components/product/product-read/product-read.component.html
+++ b/src/app/components/product/product-read/product-read.component.html
@@ -1,2 +1,5 @@
-<p>product-read works!</p>
-
+<ul class="lista">
+    <li *ngFor="let product of products">
+        {{ product.id }} => {{ product.name }}
+    </li>
+</ul>
