Desafio Método Excluir Produto - Resposta

--- a/src/app/components/product/product-update/product-update.component.html
+++ b/src/app/components/product/product-update/product-update.component.html
@@ -14,10 +14,10 @@
 
     
     <button mat-raised-button (click)="updateProduct()" color="primary" >
-        Salvar
+        Atualizar
     </button>
     
-    <button mat-raised-button (click)="cancel()" >
+    <button mat-raised-button (click)="cancel()" color="primary">
         Cancelar
     </button>
 </mat-card>
